--- a/src/main/resources/templates/pages/home/index.html
+++ b/src/main/resources/templates/pages/home/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <html lang="en" xmlns:th="http://thymeleaf.org" th:replace="~{/layouts/default :: layout(~{::title}, ~{::main})}">
+
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
 <body>
     <main>
-        <h1 align="center"> This is Home Page</h1>
+        <div class="container">
+            <div class="content">
+                <h2>Hungarian Football Hub</h2>
+                <img width="60%" class="img-thumbnail rounded float-right" th:src="@{/images/football-child.jpeg}" alt="Home page image">
+                <h4>Welcome to the World of Hungarian Football: Explore Clubs and Players</h4>
+                <p>
+                    Discover the rich history and talent of Hungarian football on our website.
+                    Explore the top clubs and their star players, and stay updated with the latest news, scores, and statistics.
+                    Whether you're a die-hard fan or a casual enthusiast, our platform has something for everyone.
+                </p>
+                <a class="btn btn-primary" th:href="@{/learnmore}">Learn more..</a>
+            </div>
+        </div>
     </main>
 </body>
 </html>
