--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -1,47 +1,40 @@
-
+<div xmlns:th="http://www.thymeleaf.org"
+     xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+    <div>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" th:href="@{/}">
+                        <i class="fa-regular fa-futbol fa-spin fa-2xl"></i>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Match</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Me</a>
+                    <a class="nav-link" th:href="@{/}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact Us</a>
                 </li>
+                <li class="nav-item" sec:authorize="isAnonymous()">
+                    <a class="nav-link" th:href="@{/login}">Login</a>
+                </li>
+                <li class="nav-item" sec:authorize="isAnonymous()">
+                    <a class="nav-link" th:href="@{/register}">Register</a>
+                </li>
+
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" th:href="@{/logout}">Logout</a>
+                </li>
+                <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                    <a class="nav-link" th:href="@{/admin/home}">Admin</a>
+                </li>
+
             </ul>
+            <div sec:authorize="isAuthenticated()">
+                <h3>Welcome <span sec:authentication="principal.username">User</span> </h3>
+            </div>
         </div>
     </div>
 </nav>
-
-
-<!--<div xmlns:th="http://www.thymeleaf.org"-->
-<!--     xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">-->
-<!--    <div>-->
-
-<!--        <span sec:authorize="isAnonymous()">-->
-<!--            <a th:href="@{/login}">Login</a>-->
-<!--            <a th:href="@{/register}">Register</a>-->
-<!--        </span>-->
-
-<!--        <span sec:authorize="isAuthenticated()">-->
-<!--            <a th:href="@{/home}">Home</a>-->
-<!--            <a th:href="@{/logout}">Logout</a>-->
-<!--        </span>-->
-
-<!--        <span sec:authorize="hasRole('ROLE_ADMIN')">-->
-<!--            <a th:href="@{/admin/home}">Admin</a>-->
-<!--        </span>-->
-<!--    </div>-->
-
-<!--    <div sec:authorize="isAuthenticated()">-->
-<!--        <h3>Welcome <span sec:authentication="principal.username">User</span> </h3>-->
-<!--    </div>-->
-
-<!--</div>-->
