--- a/src/main/resources/templates/pages/home/index.html
+++ b/src/main/resources/templates/pages/home/index.html
@@ -8,17 +8,19 @@
 </head>
 <body>
     <main>
-        <div class="container">
-            <div class="content">
-                <h2>Hungarian Football Hub</h2>
-                <img width="60%" class="img-thumbnail rounded float-right" th:src="@{/images/football-child.jpeg}" alt="Home page image">
-                <h4>Welcome to the World of Hungarian Football: Explore Clubs and Players</h4>
-                <p>
-                    Discover the rich history and talent of Hungarian football on our website.
-                    Explore the top clubs and their star players, and stay updated with the latest news, scores, and statistics.
-                    Whether you're a die-hard fan or a casual enthusiast, our platform has something for everyone.
-                </p>
-                <a class="btn btn-primary" th:href="@{/learnmore}">Learn more..</a>
+        <div class="homepage">
+            <div class="container">
+                <div class="content">
+                    <h2>Hungarian Football Hub</h2>
+                    <img width="60%" class="img-thumbnail rounded float-right" th:src="@{/images/football-child.jpeg}" alt="Home page image">
+                    <h4>Welcome to the World of Hungarian Football: Explore Clubs and Players</h4>
+                    <p>
+                        Discover the rich history and talent of Hungarian football on our website.
+                        Explore the top clubs and their star players, and stay updated with the latest news, scores, and statistics.
+                        Whether you're a die-hard fan or a casual enthusiast, our platform has something for everyone.
+                    </p>
+                    <a class="btn btn-primary" th:href="@{/learnmore}">Learn more..</a>
+                </div>
             </div>
         </div>
     </main>
