--- a/src/main/resources/templates/pages/contact/form.html
+++ b/src/main/resources/templates/pages/contact/form.html
@@ -26,11 +26,13 @@
                     <button class="btn btn-primary">Submit</button>
                     <input class="btn btn-secondary" type="reset" value="Reset">
                 </form>
+
+                <div class="contact-image">
+                    <img th:src="@{/images/contact.png}" alt="Contact image" width="100%">
+                </div>
             </div>
 
-            <div class="contact-image">
-                <img th:src="@{/images/contact.png}" alt="Contact image">
-            </div>
+
         </div>
     </main>
 </body>
