--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -8,14 +8,14 @@
 
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/}">
-                        <i class="fa-regular fa-futbol fa-spin fa-2xl"></i>
+                        <img th:src="@{/images/logo.png}" alt="logo">
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/contact}">Contact Us</a>
+                    <a class="nav-link" th:href="@{/contact}">Contact</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link" th:href="@{/login}">Login</a>
