Fix homepage content

--- a/src/main/resources/templates/pages/home/index.html
+++ b/src/main/resources/templates/pages/home/index.html
@@ -12,16 +12,16 @@
             <div class="container">
                 <div class="content">
                     <div class="homepage-head">
-                        <h2>Hungarian Football Hub</h2>
+                        <h2>Keeping Track Of Football Matches</h2>
                         <img width="70%" class="img-thumbnail rounded float-right" th:src="@{/images/football-child.jpeg}" alt="Home page image">
                         <img width="70%" class="img-thumbnail rounded float-right" th:src="@{/images/homepage02.jpeg}" alt="Home page image">
                     </div>
                     <div class="homepage-desc">
-                        <h4>Welcome to the World of Hungarian Football: Explore Clubs and Players</h4>
+                        <h4><strong>Welcome to the <u>MatchTracker</u>: <i>"The website to keep track of football matches"</i></strong></h4>
+                            <br>
                         <p>
-                            Discover the rich history and talent of Hungarian football on our website.
-                            Explore the top clubs and their star players, and stay updated with the latest news, scores, and statistics.
-                            Whether you're a die-hard fan or a casual enthusiast, our platform has something for everyone.
+                            At <strong>MatchTracker</strong>, we understand the passion that surrounds the beautiful game, and we're here to enhance your football-watching experience. Explore our user-friendly calendar to find information on upcoming matches, including date, time, and teams involved. We strive to keep you informed, so you can plan your schedule and gather with friends and fellow fans to enjoy the excitement of each match.
+                            But we're more than just a calendar; we're a community of football enthusiasts. Dive into our engaging articles, match previews, and analyses to gain insights into the strategies, key players, and current happenings in the football world. Join discussions with fellow fans in our forums, sharing your thoughts and predictions for upcoming matches.
                         </p>
                         <a class="btn btn-primary" th:href="@{/learn-more}">Learn more..</a>
                     </div>
