--- a/src/main/resources/templates/pages/home/learn-more.html
+++ b/src/main/resources/templates/pages/home/learn-more.html
@@ -11,42 +11,53 @@
     <div class="container learn-more">
       <div class="row">
         <div class="col-sm-3 mt-3 ml-5">
-          <h3>History of the Hungarian Football Championship</h3>
-          <p>The Hungarian championship is one of the oldest football leagues in Europe with a rich tradition. The first league was organized in 1901 by the MLSZ (Hungarian Football Federation, now the Hungarian Football Association), which was founded in January 1901 to bring together teams that had only been playing sporadically until then. Among these teams, you can find many clubs that are still active participants in the league today, as well as some whose names now only mean something to the most passionate football fans.</p>
+          <h3>Some Remarkable Football Matches</h3>
+          <p>
+            Whether you're a supporter of the top European leagues, passionate about international competitions, or follow your local teams,
+            MatchTracker is your one-stop hub for all things football.
+            Bookmark our site, subscribe to our newsletter, and embark on a journey through the exhilarating world of football with us. Let's kick off the excitement together!
+          </p>
         </div>
         <div class="col-sm-3 mt-3 ml-3 mb-sm-0">
           <div class="card h-100" style="width: 18rem;">
-            <img th:src="@{/images/szuszaferenc.jpg}" class="card-img-top" alt="...">
+            <img th:src="@{/images/homepage01.jpeg}" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Most Appearances</h5>
-              <p class="card-text">Most appearances by player in NB-I. league, Zoltán Végh he was a team player for Veszprém, Rába ETO, BVSC.</p>
-              <a href="https://hu.wikipedia.org/wiki/V%C3%A9gh_Zolt%C3%A1n" class="btn btn-primary" target="_blank">Link</a>
+              <h5 class="card-title">Most Appearance</h5>
+              <p class="card-text">
+                Manchester City is going head to head with Liverpool starting on 25 Nov 2023 at 12:30 UTC at Etihad Stadium stadium,
+                Manchester city, England. The match is a part of the Premier League.
+                Currently, Manchester City rank 1st, while Liverpool hold 2nd position.
+                Looking to compare the best-rated player on both teams?
+                Sofascore's rating system assigns each player a specific rating based on numerous data factors.</p>
+              <a href="https://www.sofascore.com/liverpool-manchester-city/rU" class="btn btn-primary" target="_blank">Link</a>
             </div>
           </div>
         </div>
         <div class="col-sm-3 mt-3">
           <div class="card h-100" style="width: 18rem;">
-            <img th:src="@{/images/defender.jpeg}" class="card-img-top" alt="...">
+            <img th:src="@{/images/homepage03.png}" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Top Defender</h5>
+              <h5 class="card-title">Everton Vs Manchester City</h5>
               <p class="card-text">
-                Manager Marco Rosssi has named 30 players in his provisional squad, which he trimmed down to 26 ahead of UEFA's squad deadline on June 1.
+                Everton hosts Manchester City  on matchday 36 in the  2022/2023 Premier League  .
+                The Toffees come into the match after beating Brighton 1-5 away from home.
+                For their part, the 'skyblues' won 2-1 last time against Leeds.
               </p>
-              <a href="https://en.wikipedia.org/wiki/Marco_Rossi_(footballer,_born_1964)" class="btn btn-primary" target="_blank">Link</a>
+              <a href="https://www.dazn.com/es-ES/news/f%C3%BAtbol/everton-vs-manchester-city-fecha-hora-canal-tv-donde-ver-online-premier-league/1dt5l8c1ie1281xdn2y65n0q4u" class="btn btn-primary" target="_blank">Link</a>
             </div>
           </div>
         </div>
         <div class="col-sm-3 mt-3">
           <div class="card h-100" style="width: 18rem;">
-            <img th:src="@{/images/zoltanvegh.jpg}" class="card-img-top" alt="...">
+            <img th:src="@{/images/homepage04.jpeg}" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Top Goal Scorer</h5>
+              <h5 class="card-title">Bacelona Vs Real Marid</h5>
               <p class="card-text">
-                Top goal scorer player in NB-I. league was Ferenc Szusza with the average of 0.85 goals per match
-                Goalkeepers also showed a greater tendency to separate out these sensory signals,
-                which may stem from a need to make quick decisions based on visual and auditory information coming in at different times.
+                Barcelona is going head to head with Real Madrid starting on 28 Oct 2023 at 14:15 UTC at Olímpic Lluís Companys stadium, Barcelona city, Spain. The match is a part of the LaLiga.
+                Barcelona played against Real Madrid in 1 matches this season. Currently, Barcelona rank 3rd, while Real Madrid hold 2nd position. Looking to compare the best-rated player on both
+                teams? Sofascore's rating system assigns each player a specific rating based on numerous data factors.
               </p>
-              <a href="https://hu.wikipedia.org/wiki/Szusza_Ferenc" class="btn btn-primary" target="_blank">Link</a>
+              <a href="https://www.sofascore.com/real-madrid-barcelona/rgbsEgb" class="btn btn-primary" target="_blank">Link</a>
             </div>
           </div>
         </div>
