Finished Register/Login + Authentication + Authorization

--- a/src/main/resources/templates/pages/user/user.html
+++ b/src/main/resources/templates/pages/user/user.html
@@ -5,7 +5,9 @@
 </head>
 <body>
   <main>
-    <h1>Only user logged in view this page</h1>
+    <div class="container logged-success">
+      <h1>You successfully logged in.</h1>
+    </div>
   </main>
 </body>
 </html>
