--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -1,6 +1,6 @@
 <div xmlns:th="http://www.thymeleaf.org"
      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <div>
+
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -17,6 +17,8 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/contact}">Contact</a>
                 </li>
+
+
                 <li class="nav-item" sec:authorize="isAnonymous()">
                     <a class="nav-link" th:href="@{/login}">Login</a>
                 </li>
@@ -24,16 +26,28 @@
                     <a class="nav-link" th:href="@{/register}">Register</a>
                 </li>
 
+
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" th:href="@{/matches}">Matches</a>
+                </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <a class="nav-link" th:href="@{/logout}">Logout</a>
                 </li>
-                <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a class="nav-link" th:href="@{/admin/home}">Admin</a>
+
+                <li class="nav-item ml-auto" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" href="#">
+                        <strong>Welcome <span sec:authentication="principal.username"></span></strong>
+                    </a>
                 </li>
+
+                <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                    <a class="nav-link" href="@{/admin/dashboard}">Admin</a>
+                </li>
+
+
             </ul>
-            <div sec:authorize="isAuthenticated()">
-                <h3>Welcome <span sec:authentication="principal.username">User</span> </h3>
-            </div>
         </div>
     </div>
 </nav>
+
+</div>
