--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -41,7 +41,7 @@
                 </li>
 
                 <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a class="nav-link" href="@{/admin/dashboard}">Admin</a>
+                    <a class="nav-link" th:href="@{/admin/dashboard}">Admin</a>
                 </li>
 
 
