--- a/src/main/resources/templates/pages/user/register-error.html
+++ b/src/main/resources/templates/pages/user/register-error.html
@@ -8,7 +8,7 @@
     <main>
         <div class="container my-5">
             <h1 th:text="${errorMessage}"></h1>
-            <a href="/register">Try again.</a>
+            <a th:href="@{/register}">Try again.</a>
         </div>
     </main>
 </body>
