--- a/src/main/resources/templates/partials/header-admin.html
+++ b/src/main/resources/templates/partials/header-admin.html
@@ -15,6 +15,10 @@
                 </li>
 
                 <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                    <a class="nav-link" th:href="@{/admin/watchers}">Watcher</a>
+                </li>
+
+                <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
                     <a class="nav-link" th:href="@{/admin/statistics}">Statistic</a>
                 </li>
 
