--- a/src/main/resources/templates/pages/user/user.html
+++ b/src/main/resources/templates/pages/user/user.html
@@ -1,13 +1,85 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org" th:replace="~{/layouts/default :: layout(~{::title}, ~{::main})}">
+<!doctype html>
+<html lang="en">
+<html xmlns:th="http://thymeleaf.org">
 <head>
-  <title>User Home</title>
+  <meta charset="UTF-8">
+  <!--bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!--fontawesome-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel="stylesheet" th:href="@{/css/styles.css}">
+  <link rel="icon" th:href="@{/images/favicon.png}" type="image/x-icon">
+  <title th:text="${pageTitle}"></title>
+
 </head>
+
 <body>
-  <main>
-    <div class="container logged-success">
-      <h1>You successfully logged in.</h1>
+
+<div xmlns:th="http://www.thymeleaf.org"
+     xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/}">
+              <img th:src="@{/images/logo.png}" alt="logo">
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/contact}">Contact</a>
+          </li>
+
+
+          <li class="nav-item" sec:authorize="isAnonymous()">
+            <a class="nav-link" th:href="@{/login}">Login</a>
+          </li>
+          <li class="nav-item" sec:authorize="isAnonymous()">
+            <a class="nav-link" th:href="@{/register}">Register</a>
+          </li>
+
+
+          <li class="nav-item" sec:authorize="isAuthenticated()">
+            <a class="nav-link" th:href="@{/matches}">Matches</a>
+          </li>
+          <li class="nav-item" sec:authorize="isAuthenticated()">
+            <a class="nav-link" th:href="@{/logout}">Logout</a>
+          </li>
+
+          <li class="nav-item ml-auto" sec:authorize="isAuthenticated()">
+            <a class="nav-link" href="#">
+              <strong>Welcome <span sec:authentication="principal.username"></span></strong>
+            </a>
+          </li>
+
+          <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+            <a class="nav-link" th:href="@{/admin/dashboard}">Admin</a>
+          </li>
+
+        </ul>
+      </div>
     </div>
-  </main>
+  </nav>
+
+</div>
+
+<main>
+  <div class="container logged-success">
+    <h1>You successfully logged in.</h1>
+  </div>
+</main>
+
+<footer class="footer">
+  <p>&copy; 2023 Toan - Vanessza. All rights reserved.</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
+
 </html>
